--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -12,6 +12,7 @@ dependencies:
   provider: ^6.0.3
   intl: ^0.17.0
   flutter_flavor: ^3.1.0
+  dots_indicator: ^2.1.0
 
 dev_dependencies:
   flutter_test:
