--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -13,6 +13,7 @@ dependencies:
   intl: ^0.17.0
   flutter_flavor: ^3.1.0
   dots_indicator: ^2.1.0
+  animated_bottom_navigation_bar: ^1.0.1
 
 dev_dependencies:
   flutter_test:
